@@ -259,7 +259,7 @@
 					<argLine>
 						-javaagent:"${settings.localRepository}"/org/jmockit/jmockit/1.49/jmockit-1.49.jar
 						-Dcoverage-classes=loaded
-                                                --add-module org.update4j
+                                                --add-modules org.update4j
 						--add-opens fx/org.unigrid.janus.controller=ALL-UNNAMED
 						--add-opens fx/org.unigrid.janus.controller.component=ALL-UNNAMED
 						--add-opens fx/org.unigrid.janus.model=ALL-UNNAMED
